--- a/_config.yml
+++ b/_config.yml
@@ -10,21 +10,23 @@
 ############################
 
 # Name of website
-title: My website
+title: Bao (Billy) Do
+title-img: "/assets/img/CMU_logo-transformed.png"
 
 # Your name to show in the footer
-author: Some Person
+author: Bao (Billy) Do
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Home: "home"
+  Projects:
+  Publications: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
+  News: "news"
+  CV: "https://drive.google.com/file/d/1X-aRGhrTq81zgdfltMkST830UJ8pdUtI/view?usp=sharing"
+  
 
 ################
 # --- Logo --- #
@@ -50,17 +52,17 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "baogiado1305@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+  facebook: "https://www.facebook.com/VicentDo1305"
+  # github: daattali
+  # twitter: daattali
+  # patreon: DeanAttali
+  # youtube: "@daattali"
+  # whatsapp: 15551212
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-#  linkedin: daattali
+ linkedin: "https://www.linkedin.com/in/bao-do-gia/"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -74,8 +76,8 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  bluesky: yourname
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
+ ORCID: "https://orcid.org/0009-0009-9010-6629"
+ google-scholar: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
 #  discord: "invite_code" or "users/userid" or "invite/invite_code"
 #  kaggle: yourname
 #  hackerrank: yourname
@@ -94,15 +96,15 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
+  # twitter: true
   facebook: true
   linkedin: true
-  vk: false
-  reddit: false
+  ORCID: true
+  # reddit: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
