--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Bao (Billy) Do
 
 navbar-links:
   Home: "home"
-  Projects:
+  Projects: "projects"
   Publications: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
   News: "news"
   CV: "https://drive.google.com/file/d/1X-aRGhrTq81zgdfltMkST830UJ8pdUtI/view?usp=sharing"
