--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ author: Bao (Billy) Do
 ###############################################
 
 navbar-links:
-  Home: "home"
-  Projects: "projects"
+  # Home: "home"
+  # Projects: "projects"
   Publications: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
-  News: "news"
+  # News: "news"
   CV: "https://drive.google.com/file/d/1X-aRGhrTq81zgdfltMkST830UJ8pdUtI/view?usp=sharing"
   
 
