--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 
 # Name of website
 title: Bao (Billy) Do
-# title-img: "/assets/img/CMU_logo-transformed.png"
+title-img: "/assets/img/CMU_logo-transformed.png"
 
 # Your name to show in the footer
 author: Bao (Billy) Do
@@ -21,10 +21,10 @@ author: Bao (Billy) Do
 ###############################################
 
 navbar-links:
-  # Home: "home"
-  # Projects: "projects"
+  Home: "home"
+  Projects: "projects"
   Publications: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
-  # News: "news"
+  News: "news"
   CV: "https://drive.google.com/file/d/1X-aRGhrTq81zgdfltMkST830UJ8pdUtI/view?usp=sharing"
   
 
@@ -34,7 +34,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
