--- a/_config.yml
+++ b/_config.yml
@@ -33,14 +33,14 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/avatar.jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: "/assets/img/YunTech.png"
 
 
 #####################################
@@ -96,9 +96,11 @@ rss-description: This website is a virtual proof that I'm awesome
 # Select which social network share links to show in posts
 share-links-active:
   # twitter: true
+  email: true
   facebook: true
   linkedin: true
   ORCID: true
+  google-scholar: true
   # reddit: false
 
 # How to display the link to your website in the footer
