--- a/_config.yml
+++ b/_config.yml
@@ -53,15 +53,15 @@ title-img: "/assets/img/YunTech.png"
 social-network-links:
   email: "baogiado1305@gmail.com"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: "https://www.facebook.com/VicentDo1305"
-  github: daattali
+  facebook: "VicentDo1305"
+  github: "baogiado"
   # twitter: daattali
   # patreon: DeanAttali
   # youtube: "@daattali"
   # whatsapp: 15551212
 #  medium: yourname
-  reddit: yourname or r/yoursubreddit
-  linkedin: "https://www.linkedin.com/in/bao-do-gia/"
+  # reddit: yourname or r/yoursubreddit
+  linkedin: "bao-do-gia/"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -75,8 +75,8 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  bluesky: yourname
-  ORCID: "https://orcid.org/0009-0009-9010-6629"
-  google-scholar: "https://scholar.google.com/citations?user=0iP_eFUAAAAJ&hl=vi"
+  ORCID: "0009-0009-9010-6629"
+  google-scholar: "user=0iP_eFUAAAAJ&hl=vi"
 #  discord: "invite_code" or "users/userid" or "invite/invite_code"
 #  kaggle: yourname
 #  hackerrank: yourname
